# batman-curve

./: .coveragerc  .gitattributes  .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml  setup.cfg
.github/workflows/: get_coverage.yml  run_tests.yml
batman_curve/: __init__.py  _version.py  batman.py
tests/: approval_test.py  import_test.py
viz/: makefig.py
