[metadata]
description-file = README.md

[versioneer]
VCS = git
style = pep440
versionfile_source = batman_curve/_version.py
versionfile_build = batman_curve/_version.py
tag_prefix = v
parentdir_prefix = batman-curve-

[flake8]
# ignore externals
exclude =
    versioneer.py
    _version.py

# for compatibility with black
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = E203,E501,E731,W503

[tool:pytest]
testpaths = tests
python_functions = *_test
filterwarnings =
  error
  # ignored by default
  ignore::ImportWarning
  ignore::DeprecationWarning
  ignore::PendingDeprecationWarning
  # raised by Cython, usually harmless
  ignore:numpy.dtype size changed:RuntimeWarning
  ignore:numpy.ufunc size changed:RuntimeWarning
  # sometimes, dependencies leak resources
  ignore:.*socket\.socket.*:pytest.PytestUnraisableExceptionWarning
